Upgrade to 21 (ignoring lambda)